derive/tests/ui/attr-invalid-meta-words.stderr
error: Invalid attribute parameter(s): 'Xmeta'. Expected 'meta, raw_params'
  --> $DIR/attr-invalid-meta-words.rs:8:2
   |
8  |       /// Returns a protocol version
   |  _____^
9  | |     #[rpc(name = "protocolVersion", Xmeta)]
10 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^
